first attempt to associate tooltip HTML with anchors in FE

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -33,6 +33,7 @@
 @import 'section.introduction';
 @import 'section.literature';
 @import 'section.metadata';
+@import 'span.tooltip';
 @import 'Sidebar';
 @import 'Tables';
 @import 'table';
