--- a/Stylesheets/_a.scss
+++ b/Stylesheets/_a.scss
@@ -70,3 +70,15 @@ a[rel~='external']::after
     -webkit-mask-image: var(--leaving-icon);
     -webkit-mask-size: 100% 100%;
 }
+
+//  Tooltips
+a > span.tooltip
+{
+    display: none;
+}
+a:hover > span.tooltip
+{
+    display: inline-block;
+    width: 10rem;
+    height: 10rem;
+}
