polish tooltips styling

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -12,6 +12,7 @@
 @import 'div.logo';
 @import 'div.menu';
 @import 'div.more';
+@import 'div.tooltips';
 @import 'dl';
 @import 'figure';
 @import 'form';
@@ -33,7 +34,6 @@
 @import 'section.introduction';
 @import 'section.literature';
 @import 'section.metadata';
-@import 'span.tooltip';
 @import 'Sidebar';
 @import 'Tables';
 @import 'table';
