add color for 429 Rate Limit Exceeded

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -254,4 +254,8 @@ figure.status div.pie-color > svg g
     {
         fill: rgb(255, 206, 70);
     }
+    > *.status-429
+    {
+        fill: rgb(255, 168, 37);
+    }
 }
