--- a/Stylesheets/_ul.users.scss
+++ b/Stylesheets/_ul.users.scss
@@ -32,6 +32,40 @@ ul.users > li
             margin-right: 0.5rem;
             border-radius: 50%;
         }
+
+        div.tools
+        {
+            margin-left: auto;
+            display: flex;
+            align-items: right;
+
+            color: var(--fg-heavy);
+
+            > form
+            {
+                margin-left: 0.5em;
+
+                button[type="submit"]
+                {
+                    margin: 0 0.25em;
+                    font-style: italic;
+                }
+            }
+
+            > form::before,
+            > form::after
+            {
+                color: var(--fg-semi);
+            }
+
+            > form::before
+            {
+                content: '(';
+            }
+            > form::after
+            {
+                content: ')';
+            }
+        }
     }
 }
-
