replace HTML.Logo with Unidoc.ApplicationCornice which indicates if the currently running instance is a preview

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -9,7 +9,6 @@
 @import 'div.build-pipeline';
 @import 'div.columns';
 @import 'div.constraints';
-@import 'div.logo';
 @import 'div.menu';
 @import 'div.more';
 @import 'div.tooltips';
@@ -19,6 +18,7 @@
 @import 'Headings';
 @import 'kbd';
 @import 'main.home';
+@import 'nav.cornice';
 @import 'nav.paginator';
 @import 'Notices';
 @import 'ol';
