--- a/Stylesheets/_section.declaration.scss
+++ b/Stylesheets/_section.declaration.scss
@@ -4,21 +4,28 @@ section.declaration
     {
         margin: 2.5rem 0 2.5rem;
 
-        code a
-        {
-            text-decoration: underline dashed;
-        }
-        code a:hover
-        {
-            text-decoration: underline;
-        }
-
         code
         {
+            a
+            {
+                text-decoration: underline dashed;
+            }
+            a:hover
+            {
+                text-decoration: underline;
+            }
+
+            //  Specific to declaration snippets.
+            a.xv
+            {
+                color: var(--fg-accent);
+            }
+
             display: block;
             text-indent: -2.5rem;
             margin-left: 2.5rem;
             font-size: inherit;
+            color: var(--fg-swift);
         }
 
         code.multiline
