--- a/Stylesheets/_section.introduction.scss
+++ b/Stylesheets/_section.introduction.scss
@@ -10,7 +10,7 @@ section.introduction
         font-style: italic;
 
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
 
         .phylum
         {
