add list markers to intrapage sidebar

--- a/Stylesheets/_div.sidebar.scss
+++ b/Stylesheets/_div.sidebar.scss
@@ -13,6 +13,34 @@ div.sidebar
 
         font-size: 0.875rem;
 
+        li
+        {
+            position: relative;
+            color: var(--fg-semi);
+
+            a
+            {
+                color: inherit;
+            }
+        }
+
+        li::before
+        {
+            position: absolute;
+            content: '•';
+            left: -0.8em;
+            color: var(--fg-light);
+        }
+        li.active::before
+        {
+            content: '•';
+            color: var(--fg-heavy);
+        }
+        li.active + li.active::before
+        {
+            color: var(--fg-light);
+        }
+
         li.title
         {
             font-style: italic;
@@ -21,22 +49,14 @@ div.sidebar
             margin-bottom: 0.6em;
             border-bottom: 1px solid var(--fg-light);
         }
-
-        li.active::before
-        {
-            position: absolute;
-            content: '•';
-            left: -0.8em;
-            color: var(--fg-heavy);
-        }
-        li.active + li.active::before
+        li.title::before
         {
             content: '';
+            display: none;
         }
 
         li.active
         {
-            position: relative;
             color: var(--fg);
         }
         li.h2
@@ -50,15 +70,6 @@ div.sidebar
         li.h4
         {
             margin-left: 2rem;
-        }
-        li
-        {
-            color: var(--fg-semi);
-
-            a
-            {
-                color: inherit;
-            }
         }
     }
 
