--- a/Stylesheets/_section.group.scss
+++ b/Stylesheets/_section.group.scss
@@ -91,6 +91,12 @@ section.group
 }
 section.group
 {
+    > header > h2 > a[href^="#"]
+    {
+        color: inherit;
+    }
+
+    > header,
     > h2
     {
         margin-top: 2rem;
@@ -103,6 +109,7 @@ section.group
         border-top: solid 1px var(--fg-swift-type);
     }
 
+    > header + h3,
     > h2 + h3
     {
         margin-top: 1rem;
