generalize Bratz category to Droid, to enable measuring effectiveness of individual firewall components

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -63,7 +63,7 @@ figure.client svg > g
     {
         fill: #ff73a1;
     }
-    > *.origin-bratz
+    > *.origin-droid
     {
         fill: #f2bbcd;
     }
