--- a/Stylesheets/_Search.scss
+++ b/Stylesheets/_Search.scss
@@ -42,11 +42,12 @@ div.searchbar
 
     padding: 0.25rem 0.5rem 0.25rem 1rem;
 
-    @include backdrop-blur-pink;
-
+    //@include backdrop-blur-pink;
+    @include backdrop-blur;
+    box-shadow: 0 1rem 1.5rem var(--blur-shadow), 0 0.2rem 0 var(--blur-shadow);
     border-radius: 0.5rem;
 }
-div.searchbar,
+//div.searchbar,
 #search-results li:last-child
 {
     box-shadow: 0 0.25rem 0 var(--bg-accent-shadow);
@@ -54,7 +55,7 @@ div.searchbar,
 
 #search-input::placeholder
 {
-    color: var(--fg-accent);
+    color: var(--fg-semi);
     opacity: 1;
 }
 #search-input
