--- a/Stylesheets/_nav.cornice.scss
+++ b/Stylesheets/_nav.cornice.scss
@@ -4,5 +4,9 @@ nav.cornice
 {
     font-family: $typeface-sans;
     font-size: 12pt;
-    font-weight: 700;
+
+    > div:first-child
+    {
+        font-weight: 700;
+    }
 }
