improve appearance of user-related things

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -16,6 +16,7 @@
 @import 'dl';
 @import 'figure';
 @import 'form';
+@import 'header.visual';
 @import 'Headings';
 @import 'kbd';
 @import 'main.home';
