compute and display ABI compatibility metric

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -36,7 +36,7 @@
 @import 'section.introduction';
 @import 'section.literature';
 @import 'section.metadata';
-@import 'Tables';
+@import 'span';
 @import 'table';
 @import 'Typefaces';
 @import 'ul.cards';
