--- a/Stylesheets/Variables/_root.scss
+++ b/Stylesheets/Variables/_root.scss
@@ -54,6 +54,8 @@
     --fg-accent-semi: var(--color-accent-semi);
     --fg-accent-light: var(--color-accent-light);
 
+    --fg-warn: rgb(255, 115, 0);
+
     --fg-swift: rgb(134, 134, 134);
     --fg-swift-comment: rgb(109, 109, 109);
     --fg-swift-keyword: rgb(253, 39, 110);
