add host info to UI

--- a/Stylesheets/_ol.builds-pending.scss
+++ b/Stylesheets/_ol.builds-pending.scss
@@ -4,7 +4,7 @@ ol.builds-pending
     padding: 0;
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 1rem;
 
     > li
