--- a/Stylesheets/Main.less
+++ b/Stylesheets/Main.less
@@ -1,47 +1,43 @@
 @import 'mixins/backdrop-blur';
 
-@import 'root.less';
-@import 'a.less';
-@import 'blockquote.less';
-@import 'button.less';
-@import 'code.less';
-@import 'div.columns.less';
-@import 'div.constraints.less';
-@import 'div.hstack.less';
-@import 'div.menu.less';
-@import 'div.more.less';
-@import 'div.sidebar.less';
-@import 'div.tooltips.less';
-@import 'dl.less';
-@import 'figure.less';
-@import 'form.less';
-@import 'header.visual.less';
-@import 'kbd.less';
-@import 'main.home.less';
-@import 'nav.cornice.less';
-@import 'nav.paginator.less';
-@import 'ol.less';
-@import 'ol.builds-pending.less';
-@import 'p.less';
-@import 'pre.less';
-@import 'section.less';
-@import 'section.availability.less';
-@import 'section.declaration.less';
-@import 'section.details.less';
-@import 'section.events.less';
-@import 'section.group.less';
-@import 'section.introduction.less';
-@import 'section.literature.less';
-@import 'section.metadata.less';
-@import 'span.less';
-@import 'table.less';
-@import 'ul.cards.less';
-@import 'ul.users.less';
+@import 'root';
 
-@import 'Calendar';
-@import 'Cards';
+@import 'a';
+@import 'blockquote';
+@import 'button';
+@import 'code';
+@import 'div/columns';
+@import 'div/constraints';
+@import 'div/hstack';
+@import 'div/menu';
+@import 'div/more';
+@import 'div/sidebar';
+@import 'div/tooltips';
+@import 'dl';
+@import 'figure';
+@import 'form';
+@import 'header';
+@import 'kbd';
+@import 'nav';
+@import 'ol';
+@import 'p';
+@import 'pre';
+@import 'section';
+@import 'section/availability';
+@import 'section/calendar';
+@import 'section/declaration';
+@import 'section/details';
+@import 'section/events';
+@import 'section/group';
+@import 'section/introduction';
+@import 'section/literature';
+@import 'section/metadata';
+@import 'span';
+@import 'table';
+@import 'ul';
+
 @import 'Headings';
-@import 'Notices';
+@import 'Home';
 @import 'Search';
 
 html
