--- a/Stylesheets/a.less
+++ b/Stylesheets/a.less
@@ -70,3 +70,41 @@ a[rel~='external']::after
     -webkit-mask-image: var(--leaving-icon);
     -webkit-mask-size: 100% 100%;
 }
+
+a.source.github::before
+{
+    display: inline-block;
+    content: '';
+    height: 1.125rem;
+    width: 1.125rem;
+
+    margin-right: 0.5em;
+
+    background: var(--fg-accent);
+    mask-image: var(--github-icon);
+    mask-size: 100% 100%;
+
+    -webkit-mask-image: var(--github-icon);
+    -webkit-mask-size: 100% 100%;
+}
+a.source
+{
+    display: flex;
+    align-items: center;
+
+    font-family: var(--typeface-mono);
+    font-size: 87.5%;
+    color: var(--fg-semi);
+    text-decoration-color: var(--fg-accent);
+
+    span.file
+    {
+        font-weight: 500;
+    }
+
+    span.file,
+    span.line
+    {
+        color: var(--fg-accent);
+    }
+}
