--- a/Stylesheets/section/signage.less
+++ b/Stylesheets/section/signage.less
@@ -1,44 +1,22 @@
-section.notice,
 section.signage
 {
     margin: 0.75rem 0;
 
-    p
-    {
-        margin: 0;
-    }
-}
-section.notice
-{
-    font-style: italic;
-    color: var(--fg-accent);
-
-    code
-    {
-        font-style: normal;
-        background-color: transparent;
-    }
-
-    a
-    {
-        text-decoration: underline;
-        text-decoration-style: dashed;
-    }
-    a:hover
-    {
-        text-decoration-style: solid;
-    }
-
-    em
-    {
-        font-weight: 700;
-    }
-}
-
-section.signage
-{
     display: flex;
     align-items: stretch;
+
+    > p
+    {
+        flex: 1 1 auto;
+        margin: 0;
+        padding: 0.5rem 0.5rem 0.5rem 1rem;
+
+        font-family: var(--typeface-mono);
+
+        background-color: var(--bg-elevated);
+        border-radius: 0 0.5rem 0.5rem 0;
+        box-shadow: 0 0.25rem 0 0 var(--bg-elevated-shadow);
+    }
 }
 section.signage::before
 {
@@ -70,15 +48,4 @@ section.signage.deprecation.renamed::before
     background-color: var(--bg-aqua);
     box-shadow: 0 0.25rem 0 0 var(--bg-aqua-shadow);
     content: '→';
-}
-section.signage > p
-{
-    flex: 1 1 auto;
-    padding: 0.5rem 0.5rem 0.5rem 1rem;
-
-    font-family: var(--typeface-mono);
-
-    background-color: var(--bg-elevated);
-    border-radius: 0 0.5rem 0.5rem 0;
-    box-shadow: 0 0.25rem 0 0 var(--bg-elevated-shadow);
 }
