--- a/Stylesheets/div/menu.less
+++ b/Stylesheets/div/menu.less
@@ -27,7 +27,7 @@ div.menu
         box-shadow: 0 1rem 3rem var(--blur-shadow);
         border-radius: 0.5rem;
 
-        .mixin.backdrop-blur();
+        .backdrop-blur();
 
         > li
         {
