--- a/Stylesheets/div/tooltips.less
+++ b/Stylesheets/div/tooltips.less
@@ -17,7 +17,7 @@ div.tooltips
 
         transition: all 0.25s;
 
-        .mixin.backdrop-blur();
+        .backdrop-blur();
 
         padding: 0.5rem 1rem;
         box-shadow: 0 1rem 3rem var(--blur-shadow);
