--- a/Stylesheets/p.less
+++ b/Stylesheets/p.less
@@ -4,16 +4,16 @@
 
 p
 {
-    line-height: 1.8rem;
+    line-height: var(--line-height-body);
     hyphens: auto;
 
     code
     {
-        .mixin.inline-code();
+        .inline-code();
     }
     img
     {
-        .mixin.inline-image();
+        .inline-image();
     }
 }
 
