--- a/Stylesheets/section/details.less
+++ b/Stylesheets/section/details.less
@@ -3,7 +3,7 @@ section.details
     aside code,
     table code
     {
-        .mixin.inline-code();
+        .inline-code();
     }
 
     section.parameters
