--- a/Stylesheets/root.less
+++ b/Stylesheets/root.less
@@ -1,11 +1,13 @@
-:root
+html
 {
+    --typeface-ui: 'DM Sans', sans-serif;
     --typeface-headline: 'DM Sans', sans-serif;
     --typeface-body: 'Literata', serif;
     --typeface-mono: 'IBM Plex Mono', monospace;
-}
-:root
-{
+
+    --line-height-body: 1.8;
+    --font-size-body: 16px;
+
     --color-accent-light: rgb(255, 172, 200);
     --color-accent-semi: rgb(255, 136, 176);
     --color-accent: rgb(255, 86, 158);
@@ -15,14 +17,13 @@
     --color-secondary: rgb(189, 108, 255);
     --color-secondary-dark: rgb(150, 80, 255);
     --color-tertiary: rgb(0, 193, 207);
-}
 
-:root
-{
+    --blur-filter: blur(10px) saturate(180%);
     --blur-shadow: rgba(0, 0, 0, 0.15);
 
+    --mg: rgb(223, 223, 223);
     --bg: rgb(250, 250, 250);
-    --bg-translucent: rgba(250, 250, 250, 0.5);
+    --bg-translucent-alpha: 50%;
 
     --bg-codewell: rgb(240, 240, 240);
     --bg-codewell-gloss: rgb(236, 236, 236);
@@ -67,11 +68,8 @@
     --fg-swift-keyword: rgb(253, 39, 110);
     --fg-swift-literal: rgb(141, 61, 231);
     --fg-swift-type: rgb(255, 123, 0);
-}
 
-@media (prefers-color-scheme: dark)
-{
-    :root
+    @media (prefers-color-scheme: dark)
     {
         --color-accent-light: rgb(153, 0, 71);
         --color-accent-semi: rgb(218, 0, 102);
@@ -82,14 +80,12 @@
         --color-secondary: rgb(189, 108, 255);
         --color-secondary-dark: rgb(150, 80, 255);
         --color-tertiary: rgb(0, 193, 207);
-    }
 
-    :root
-    {
         --blur-shadow: rgba(0, 0, 0, 0.75);
 
+        --mg: rgb(49, 49, 49);
         --bg: rgb(20, 20, 20);
-        --bg-translucent: rgba(20, 20, 20, 0.3);
+        --bg-translucent-alpha: 30%;
 
         --bg-codewell: rgb(30, 30, 30);
         --bg-codewell-gloss: rgb(36, 36, 36);
@@ -125,6 +121,67 @@
         --fg-swift-keyword: rgb(255, 53, 97);
         --fg-swift-literal: rgb(195, 143, 255);
         --fg-swift-type: rgb(255, 161, 37);
+    }
+
+    font-size: 1.0rem;
+    background-color: var(--bg);
+
+    body
+    {
+        color: var(--fg);
+        font-family: var(--typeface-body);
+        font-size: var(--font-size-body);
+
+        font-variant-numeric: oldstyle-nums;
+        text-size-adjust: none;
+        -webkit-text-size-adjust: none;
+    }
+
+    h1, h2, h3, h4, h5, h6
+    {
+        font-family: var(--typeface-headline);
+    }
+
+    h1
+    {
+        font-size: 200%;
+    }
+    h2
+    {
+        font-size: 150%;
+    }
+    h3
+    {
+        font-size: 130%;
+    }
+    h4, h5, h6
+    {
+        font-size: 110%;
+    }
+}
+
+html[data-theme='eden']
+{
+    --typeface-headline: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --typeface-body: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    --typeface-mono: 'Menlo', monospace;
+
+    --line-height-body: 1.5;
+    --font-size-body: 17px;
+
+    --color-accent-light: rgb(172, 198, 255);
+    --color-accent-semi: rgb(136, 178, 255);
+    --color-accent: rgb(51, 102, 255);
+    --color-accent-dark: rgb(20, 75, 238);
+
+    --color-hot: rgb(96, 39, 253);
+    --color-secondary: rgb(189, 108, 255);
+    --color-secondary-dark: rgb(150, 80, 255);
+    --color-tertiary: rgb(0, 193, 207);
+
+    h1, h2, h3, h4, h5, h6
+    {
+        font-weight: 300;
     }
 }
 
