--- a/Stylesheets/class/chyron.less
+++ b/Stylesheets/class/chyron.less
@@ -25,7 +25,7 @@
         span.stars::before
         {
             content: '★ ';
-            color: var(--fg-swift-type);
+            color: var(--fg-gold);
         }
     }
 }
