fix WebKit rendering bugs

--- a/Stylesheets/class/declaration.less
+++ b/Stylesheets/class/declaration.less
@@ -8,11 +8,12 @@
 
         a
         {
-            text-decoration: underline dashed;
+            text-decoration: underline;
+            text-decoration-style: dashed;
         }
         a:hover
         {
-            text-decoration: underline;
+            text-decoration-style: solid;
         }
 
         //  Specific to declaration snippets.
